--- a/a20210406-01-jq-ajax.html
+++ b/a20210406-01-jq-ajax.html
@@ -18,6 +18,7 @@
     <!-- jquery的方法，'a20210401-07-array-json.php'檔案相對路徑 -->
     <!-- jQuery $.get() 和 $.post() 方法提供了從 Web 伺服器非同步傳送和檢索資料的簡單工具 -->
     <!-- jQuery.get( url [, data ] [, success ] [, dataType ] ) -->
+    <!-- 這邊省略了[, data ] -->
     <script>
         $.get('a20210401-07-array-json.php', function (data) {
             console.log(data);
